styles/style.css
:root {
  --coffee-clr: #986b4b;
  --bgclr-light: #fff5e2;
  --bgclr-dark: #4f2c12;
  --font-cabin: "Cabin Sketch", cursive;
  --font-grotesque: "Darker Grotesque", sans-serif;
  --font-henny: "Henny Penny", cursive;
  --font-splash: "Splash", cursive;
}

/* font-family: 'Cabin Sketch', cursive;
font-family: 'Darker Grotesque', sans-serif;
font-family: 'Henny Penny', cursive;
font-family: 'Splash', cursive; */

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
body {
  width: 100vw;
  height: 100vh;
  overflow-x: hidden;
  background-color: var(--bgclr-light);
}

body > section {
  display: none;
}
body > footer {
  display: none;
}

#loader-section {
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: #faf2ca;
}
#loader-section img {
  max-width: 100%;
  max-height: 100%;
}

body::-webkit-scrollbar {
  width: 0.5rem;
  display: none;
}

body::-webkit-scrollbar-track {
  box-shadow: inset 0 0 6px var(--coffee-clr);
  display: none;
}

body::-webkit-scrollbar-thumb {
  background-color: var(--coffee-clr);
  border-radius: 90px;
}

#brand-title {
  display: flex;
  justify-content: center;
  margin-top: 5%;
  font-size: min(10vw, 4rem);
  color: var(--bgclr-dark);
  font-family: var(--font-splash);
  text-shadow: 5px 5px 5px var(--coffee-clr);
}

#landing-section {
  position: relative;
  width: 100%;
  height: 300vh;
  background-color: var(--bgclr-light);
  z-index: 0;
}

#cup-svg {
  position: sticky;
  top: 50%;
  left: 50%;
  overflow: visible;
  transition: transform 1s;
  transform: translate(-60%, -160%);
  z-index: 2;
  height: 7vw;
  width: 7vw;
}

/* cup part */
#g3935 {
  transform: matrix(1.7596875, 0, 0, 1.7876403, -47.303786, 52.337575);
  animation: drop 1.5s ease-in-out infinite;
  animation-play-state: paused;
  animation-delay: calc(var(--scroll) * -1s);
  animation-iteration-count: 1;
  animation-fill-mode: both;
}

/* saucer */
#g3802 {
  animation: slide 1s ease-in-out infinite;
  animation-play-state: paused;
  animation-delay: calc(var(--scroll) * -1s);
  animation-iteration-count: 1;
  animation-fill-mode: both;
}

/* shadow */
#path3956 {
  animation: slide 1s ease-in-out infinite;
  animation-play-state: paused;
  animation-delay: calc(var(--scroll) * -1s);
  animation-iteration-count: 1;
  animation-fill-mode: both;
}

/* coffee inside */
#path3853 {
  fill: var(--coffee-clr);
  animation: spill 1s ease-in-out infinite;
  animation-play-state: paused;
  animation-delay: calc(var(--scroll) * -1s);
  animation-iteration-count: 1;
  animation-fill-mode: both;
}

#coffee-puddle {
  position: absolute;
  width: 35vw;
  bottom: -35px;
  right: -2%;
  z-index: -100;
  opacity: 0;
  transition: 2s opacity ease;
}

#coffee-puddle.active {
  opacity: 1;
}

/* outer puddle */
#outer-puddle {
  fill: var(--coffee-clr);
}

/* inner puddle */
#path3943 {
  fill: var(--coffee-clr);
}

#coffee-flow-section {
  position: relative;
}

#coffee-flow-container {
  position: relative;
  width: 100%;
  height: 100%;
  z-index: -100;
}

#coffee-flow {
  width: 100%;
  height: 100%;
}

#coffee-flow-path {
  fill: var(--coffee-clr);
}

#coffee-flow-mask {
  position: fixed;
  bottom: 0;
  z-index: -20;
  width: 100%;
  height: 60vh;
  background-color: var(--bgclr-light);
  box-shadow: 0 0 15px 15px var(--bgclr-light);
}

.product-cards-container {
  position: absolute;
  width: 100%;
  height: max-content;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  padding-top: 4rem;
}

.product-card {
  display: flex;
  align-items: center;
  width: 100%;
  height: 50vw;
  padding-inline: 10%;
  cursor: pointer;
}
.product-cards-container .product-card:nth-child(odd) {
  flex-direction: row;
}

.product-cards-container .product-card:nth-child(even) {
  flex-direction: row-reverse;
}
.product-card > .image-container {
  width: 18%;
}

.product-card > .details-container {
  width: 82%;
}

.product-card > .image-container > img {
  max-width: 100%;
  transition: all 0.5s ease;
  filter: drop-shadow(0px 0px 5px black);
}

.product-card:hover > .image-container > img {
  filter: drop-shadow(8px 8px 8px black);
}

.product-cards-container .product-card:nth-child(odd) > .details-container {
  padding-left: 2rem;
}

.product-cards-container .product-card:nth-child(even) > .details-container {
  padding-right: 2rem;
}

.product-cards-container
  .product-card:nth-child(odd):hover
  > .image-container
  > img {
  transform: scale(1.3) rotate(+10deg);
}

.product-cards-container
  .product-card:nth-child(even):hover
  > .image-container
  > img {
  transform: scale(1.2) rotate(-10deg);
}

.coffee-name {
  font-size: 5vw;
  font-weight: bold;
  font-family: var(--font-cabin);
  color: var(--bgclr-dark);
  text-shadow: 0 0 10px white;
}

.coffee-about {
  font-size: 2vw;
  font-weight: 600;
  font-family: var(--font-grotesque);
  text-shadow: 0 0 10px white;
}

.takeaway-cup-container {
  position: absolute;
  z-index: 10;
  width: 19vw;
  bottom: -20vw;
  left: 12vw;
}
.takeaway-cup-container > img {
  max-width: 100%;
  transform: rotate(10deg);
  filter: drop-shadow(5px 5px 10px black);
}

#explore-btn-container {
  position: absolute;
  bottom: 5vw;
  left: 50%;
}

#explore-btn {
  position: relative;
  width: 25vw;
  height: 6vw;
  border-radius: 50px;
  background: var(--bgclr-light);
  border: 2px solid var(--bgclr-dark);
  overflow: hidden;
  cursor: pointer;
  box-shadow: 2px 2px 2px black;
}
#explore-btn:hover {
  box-shadow: 6px 6px 6px black;
  transform: scale(1.2);
}

#drop-1 {
  display: none;
  position: absolute;
  left: 20%;
  top: 0;
  width: 3%;
  height: 2%;
  background-color: var(--bgclr-dark);
  border-radius: 0 0 50px 50px;
}
#drop-1.started {
  animation: half-fill 4s;
}

#drop-2 {
  display: none;
  position: absolute;
  left: 16%;
  top: 20%;
  width: 1%;
  height: 0;
  background-color: var(--bgclr-dark);
  border-radius: 0 0 50px 50px;
}
#drop-2.started {
  animation: fill 2s;
  animation-delay: 1.5s;
}

#drop-3 {
  display: none;
  position: absolute;
  left: 18%;
  top: 20%;
  width: 2%;
  height: 0;
  background-color: var(--bgclr-dark);
  border-radius: 0 0 50px 50px;
}
#drop-3.started {
  animation: fill 1.5s;
  animation-delay: 1.5s;
}

#drop-4 {
  display: none;
  position: absolute;
  left: 23%;
  top: 20%;
  width: 1%;
  height: 0;
  background-color: var(--bgclr-dark);
  border-radius: 0 0 50px 50px;
}

#drop-4.started {
  animation: fill 2s;
  animation-delay: 1.5s;
}

#explore-btn > img {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  left: 5%;
  height: 70%;
}

#explore-btn > span {
  position: absolute;
  right: 10%;
  top: 50%;
  transform: translateY(-50%);
  font-family: var(--font-grotesque);
  font-size: min(2vw, 1.5rem);
  font-weight: 800;
  color: var(--bgclr-dark);
}

#coffee-fill {
  position: absolute;
  bottom: 0;
  width: 100%;
  height: 0%;
  background-color: var(--bgclr-dark);
  --mask: radial-gradient(12.5px at 50% 17.6px, #000 99%, #0000 101%)
      calc(50% - 16px) 0/32px 100%,
    radial-gradient(12.5px at 50% -9.6px, #0000 99%, #000 101%) 50% 8px/32px
      100% repeat-x;
  -webkit-mask: var(--mask);
  mask: var(--mask);
}
#coffee-fill.started {
  animation: complete-fill 2.5s;
  animation-delay: 3s;
}

footer {
  position: relative;
  height: 70vh;
  width: 100vw;
  background: var(--bgclr-dark);
}

#scroll-btn {
  position: absolute;
  right: 3vw;
  top: 3vw;
  background-color: transparent;
  color: var(--bgclr-light);
  border: none;
  cursor: pointer;
}

.gg-chevron-double-up-o {
  transform: scale(1.4);
}

#footer-brand-title {
  position: absolute;
  top: 6%;
  left: 50%;
  font-size: min(7vw, 4rem);
  color: var(--bgclr-light);
  font-family: var(--font-splash);
}

#social-links {
  position: absolute;
  right: 5%;
  top: 40%;
  height: 40%;
  width: max-content;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  color: var(--bgclr-light);
  font-family: var(--font-grotesque);
}
#social-links > span {
  font-size: min(4vw, 1.5rem);
  font-weight: 700;
}
.link-group {
  display: flex;
  align-items: center;
  font-size: min(3vw, 1rem);
}
.link-group > i {
  margin-right: min(3vw, 1rem);
}
.link-group > span {
  display: flex;
  align-items: center;
}

#office-location {
  position: absolute;
  left: 40%;
  top: 40%;
  height: 30%;
  width: max-content;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  color: var(--bgclr-light);
  font-family: var(--font-grotesque);
}
#office-location > span {
  font-size: min(4vw, 1.5rem);
  font-weight: 700;
}
.address {
  font-size: min(3vw, 1rem);
}

#creator-info {
  position: absolute;
  bottom: 5px;
  left: 5px;
  width: max-content;
  display: flex;
  justify-content: space-evenly;
  color: var(--bgclr-light);
  font-size: min(3vw, 1rem);
  font-family: var(--font-grotesque);
}
#creator-info > a {
  width: 10%;
  text-align: center;
  text-decoration: none;
  color: var(--bgclr-light);
  font-weight: 600;
}

@keyframes drop {
  to {
    transform: matrix(1.7596875, 0, 0, 1.7876403, 700.303786, 0) rotate(45deg);
  }
}
@keyframes spill {
  to {
    transform: translateX(13px);
  }
}

@keyframes slide {
  to {
    transform: translateX(-200px);
    opacity: 0;
  }
}

@keyframes fill {
  to {
    height: 100%;
  }
}

@keyframes complete-fill {
  to {
    height: 200%;
  }
}

@keyframes half-fill {
  to {
    height: 50%;
  }
}

/* @media screen and (width<=600px) {
  #office-location {
    left: 10%;
  }
  .gg-chevron-double-up-o {
    transform: scale(1);
  }
  #cup-svg {
    transform: translate(-60%, -150%);
  }
  #coffee-puddle {
    bottom: -12px;
  }
} */

@media screen and (width <= 400px) {
  #office-location {
    left: 10%;
  }
  .gg-chevron-double-up-o {
    transform: scale(1);
  }
  #cup-svg {
    transform: translate(-60%, -170%);
  }
  #coffee-puddle {
    bottom: -7px;
  }
  .link-group > i {
    transform: scale(0.7);
  }
  .product-card {
    height: 47vw;
  }
}

@media screen and (400px < width <= 700px) {
  #office-location {
    left: 10%;
  }
  .gg-chevron-double-up-o {
    transform: scale(1);
  }
  #cup-svg {
    transform: translate(-60%, -150%);
  }
  #coffee-puddle {
    bottom: -12px;
  }
  .product-card {
    height: 47vw;
  }
}

@media screen and (700px < width <= 1050px) {
  #cup-svg {
    transform: translate(-60%, -170%);
  }
  #coffee-puddle {
    bottom: -19px;
  }
}

